storing basic info in local storage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -354,10 +354,7 @@
             </div>
             <div class="dropdown-inputs-container">
               <div class="label-input-grouping">
-                <label
-                  for="Food Category"
-                  class="create-input-label"
-                  id="meal-course"
+                <label for="Food Category" class="create-input-label"
                   >Meal Course</label
                 >
                 <div class="custom-select">
@@ -375,9 +372,7 @@
                 </div>
               </div>
               <div class="label-input-grouping">
-                <label for="cuisine-input" class="create-input-label"
-                  >Cuisine</label
-                >
+                <label for="cuisine" class="create-input-label">Cuisine</label>
 
                 <div class="custom-select">
                   <select
