added form page 2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -395,29 +395,33 @@
             <div class="ingredient-set">
               <header class="upper-container">
                 <div class="set-name-container">
-                  <label for="set-name-0" class="hidden-label"> Set Name</label>
+                  <label for="set-name-1" class="hidden-label"> Set Name</label>
                   <input
                     type="text"
-                    id="set-name-0"
+                    id="set-name-1"
                     class="set-name-input reset-focus"
                     placeholder="Set Name"
                   />
                 </div>
-                <button class="delete-set-btn default-btn">Delete Set</button>
+                <button class="delete-set-btn default-btn" id="delete-set-1">
+                  Delete Set
+                </button>
               </header>
               <section class="ingredient-inputs-container">
                 <div class="ingredient-inputs">
-                  <label for="ingredient-qty-0 " class="create-input-label"
+                  <label for="ingredient-qty-1" class="create-input-label"
                     >Quantity</label
                   >
-                  <label for="measurement-0 " class="create-input-label"
+                  <label
+                    for="ingredient-measurement-1"
+                    class="create-input-label"
                     >Measurement</label
                   >
-                  <label for="ingredient-name-0 " class="create-input-label"
+                  <label for="ingredient-name-1" class="create-input-label"
                     >Ingredient Name</label
                   >
                   <label
-                    for="ingredient-details-0 "
+                    for="ingredient-details-1"
                     class="ingredient-dets-label create-input-label"
                     >Ingredient Details</label
                   >
@@ -425,34 +429,34 @@
                   <input
                     type="number"
                     class="create-input ingredient-qty-input"
+                    id="ingredient-qty-1"
+                    name="ingredient-qty-1"
                   />
                   <div class="custom-select">
                     <select
-                      name="measurement-0"
-                      id="measurement-0"
+                      name="ingredient-measurement-1"
+                      id="ingredient-measurement-1"
                       class="create-input create-input-dropdown measurement-input"
                     >
                       <option value="cup">cup</option>
-                      <option value="cup">Charizard</option>
-                      <option value="cup">Mega Lucario</option>
-                      <option value="cup">Mega Sprigatitto</option>
                     </select>
                   </div>
 
                   <input
                     type="text"
                     class="create-input"
-                    id="ingredient-name-0"
-                    name="ingredient-name-0"
+                    id="ingredient-name-1"
+                    name="ingredient-name-1"
                   />
                   <input
                     type="text"
                     class="create-input"
-                    id="ingredient-details-0"
-                    name="ingredient-details-0"
+                    id="ingredient-details-1"
+                    name="ingredient-details-1"
                   />
                   <button
-                    name="delete-ingredient-0 "
+                    name="delete-ingredient-1"
+                    id="delete-ingredient-1"
                     class="delete-ingredient-btn default-btn"
                   >
                     <ion-icon
@@ -462,7 +466,11 @@
                   </button>
                 </div>
               </section>
-              <button class="add-ingredient-btn default-btn">
+              <button
+                class="add-ingredient-btn default-btn"
+                id="add-ingredient-1"
+                name="add-ingredient-1"
+              >
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
               </button>
@@ -471,29 +479,33 @@
             <div class="ingredient-set">
               <header class="upper-container">
                 <div class="set-name-container">
-                  <label for="set-name-0" class="hidden-label"> Set Name</label>
+                  <label for="set-name-2" class="hidden-label"> Set Name</label>
                   <input
                     type="text"
-                    id="set-name-0"
+                    id="set-name-2"
                     class="set-name-input reset-focus"
                     placeholder="Set Name"
                   />
                 </div>
-                <button class="delete-set-btn default-btn">Delete Set</button>
+                <button class="delete-set-btn default-btn" id="delete-set-2">
+                  Delete Set
+                </button>
               </header>
               <section class="ingredient-inputs-container">
                 <div class="ingredient-inputs">
-                  <label for="ingredient-qty-0 " class="create-input-label"
+                  <label for="ingredient-qty-2" class="create-input-label"
                     >Quantity</label
                   >
-                  <label for="measurement-0 " class="create-input-label"
+                  <label
+                    for="ingredient-measurement-2"
+                    class="create-input-label"
                     >Measurement</label
                   >
-                  <label for="ingredient-name-0 " class="create-input-label"
+                  <label for="ingredient-name-2" class="create-input-label"
                     >Ingredient Name</label
                   >
                   <label
-                    for="ingredient-details-0 "
+                    for="ingredient-details-2"
                     class="ingredient-dets-label create-input-label"
                     >Ingredient Details</label
                   >
@@ -501,33 +513,34 @@
                   <input
                     type="number"
                     class="create-input ingredient-qty-input"
+                    id="ingredient-qty-2"
+                    name="ingredient-qty-2"
                   />
                   <div class="custom-select">
                     <select
-                      name="measurement-0"
-                      id="measurement-0"
+                      name="ingredient-measurement-2"
+                      id="ingredient-measurement-2"
                       class="create-input create-input-dropdown measurement-input"
                     >
                       <option value="cup">cup</option>
-                      <option value="cup">Charizard</option>
-                      <option value="cup">Mega Lucario</option>
-                      <option value="cup">Mega Sprigatitto</option>
                     </select>
                   </div>
+
                   <input
                     type="text"
                     class="create-input"
-                    id="ingredient-name-0"
-                    name="ingredient-name-0"
+                    id="ingredient-name-2"
+                    name="ingredient-name-2"
                   />
                   <input
                     type="text"
                     class="create-input"
-                    id="ingredient-details-0"
-                    name="ingredient-details-0"
+                    id="ingredient-details-2"
+                    name="ingredient-details-2"
                   />
                   <button
-                    name="delete-ingredient-0 "
+                    name="delete-ingredient-2"
+                    id="delete-ingredient-2"
                     class="delete-ingredient-btn default-btn"
                   >
                     <ion-icon
@@ -537,7 +550,11 @@
                   </button>
                 </div>
               </section>
-              <button class="add-ingredient-btn default-btn">
+              <button
+                class="add-ingredient-btn default-btn"
+                id="add-ingredient-2"
+                name="add-ingredient-2"
+              >
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
               </button>
