delete set functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -403,7 +403,11 @@
                     placeholder="Set Name"
                   />
                 </div>
-                <button class="delete-set-btn default-btn" id="delete-set-1">
+                <button
+                  type="button"
+                  class="delete-set-btn default-btn"
+                  id="delete-set-1"
+                >
                   Delete Set
                 </button>
               </header>
@@ -559,8 +563,7 @@
                 <p>Add Ingredient</p>
               </button>
             </div>
-
-            <button class="add-set-btn default-btn">
+            <button type="button" class="add-set-btn default-btn">
               <ion-icon name="add" class="add-set-icon"></ion-icon>
               <p>Add Set</p>
             </button>
@@ -692,5 +695,6 @@
     <script type="module" src="scripts/create-recipe.js"></script>
     <script type="module" src="scripts/form-behavior.js"></script>
     <script type="module" src="scripts/store-create-recipe.js"></script>
+    <script type="module" src="scripts/ingredient-buttons.js"></script>
   </body>
 </html>
