added add ingredient functionality'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -485,6 +485,7 @@
                 class="add-ingredient-btn default-btn"
                 id="add-ingredient-1"
                 name="add-ingredient-1"
+                type="button"
               >
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
@@ -546,7 +547,7 @@
                     id="ingredient-qty-2"
                     name="ingredient-qty-2"
                   />
-                  <div class="custom-select">
+                  <div class="custom-select ing-measure-input-container">
                     <select
                       name="ingredient-measurement-2"
                       id="ingredient-measurement-2"
@@ -584,6 +585,7 @@
                 class="add-ingredient-btn default-btn"
                 id="add-ingredient-2"
                 name="add-ingredient-2"
+                type="button"
               >
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
