fixed ids and names of elements and added add ingredient

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -396,47 +396,42 @@
               <header class="upper-container">
                 <div class="set-name-container">
                   <label
-                    for="set-name-1"
+                    for="set-name-1-1"
                     class="ing-set-name-label hidden-label"
                   >
                     Set Name</label
                   >
                   <input
                     type="text"
-                    id="set-name-1"
-                    name="set-name-1"
+                    id="set-name-1-1"
+                    name="set-name-1-1"
                     class="set-name-input reset-focus"
                     placeholder="Set Name"
                   />
                 </div>
-                <button
-                  type="button"
-                  class="delete-set-btn default-btn"
-                  id="delete-set-1"
-                  name="delete-set-1"
-                >
+                <button type="button" class="delete-set-btn default-btn">
                   Delete Set
                 </button>
               </header>
               <section class="ingredient-inputs-container">
                 <div class="ingredient-inputs">
                   <label
-                    for="ingredient-qty-1"
+                    for="ingredient-qty-1-2"
                     class="create-input-label ing-quantity-label"
                     >Quantity</label
                   >
                   <label
-                    for="ingredient-measurement-1"
+                    for="ingredient-measurement-1-3"
                     class="create-input-label ing-measure-label"
                     >Measurement</label
                   >
                   <label
-                    for="ingredient-name-1"
+                    for="ingredient-name-1-4"
                     class="ing-name-label create-input-label"
                     >Ingredient Name</label
                   >
                   <label
-                    for="ingredient-details-1"
+                    for="ingredient-details-1-5"
                     class="ingredient-dets-label create-input-label"
                     >Ingredient Details</label
                   >
@@ -444,13 +439,14 @@
                   <input
                     type="number"
                     class="create-input ingredient-qty-input"
-                    id="ingredient-qty-1"
-                    name="ingredient-qty-1"
+                    id="ingredient-qty-1-2"
+                    name="ingredient-qty-1-2"
                   />
-                  <div class="custom-select">
+
+                  <div class="custom-select ing-measure-input-container">
                     <select
-                      name="ingredient-measurement-1"
-                      id="ingredient-measurement-1"
+                      name="ingredient-measurement-1-3"
+                      id="ingredient-measurement-1-3"
                       class="create-input create-input-dropdown measurement-input"
                     >
                       <option value="cup">cup</option>
@@ -460,20 +456,16 @@
                   <input
                     type="text"
                     class="create-input ing-name-input"
-                    id="ingredient-name-1"
-                    name="ingredient-name-1"
+                    id="ingredient-name-1-4"
+                    name="ingredient-name-1-4"
                   />
                   <input
                     type="text"
                     class="create-input ing-details-input"
-                    id="ingredient-details-1"
-                    name="ingredient-details-1"
+                    id="ingredient-details-1-5"
+                    name="ingredient-details-1-5"
                   />
-                  <button
-                    name="delete-ingredient-1"
-                    id="delete-ingredient-1"
-                    class="delete-ingredient-btn default-btn"
-                  >
+                  <button class="delete-ingredient-btn default-btn">
                     <ion-icon
                       name="close-outline"
                       class="delete-ingredient-icon"
@@ -481,12 +473,7 @@
                   </button>
                 </div>
               </section>
-              <button
-                class="add-ingredient-btn default-btn"
-                id="add-ingredient-1"
-                name="add-ingredient-1"
-                type="button"
-              >
+              <button class="add-ingredient-btn default-btn" type="button">
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
               </button>
@@ -496,47 +483,42 @@
               <header class="upper-container">
                 <div class="set-name-container">
                   <label
-                    for="set-name-2"
+                    for="set-name-2-1"
                     class="ing-set-name-label hidden-label"
                   >
                     Set Name</label
                   >
                   <input
                     type="text"
-                    id="set-name-2"
-                    name="set-name-2"
+                    id="set-name-2-1"
+                    name="set-name-2-1"
                     class="set-name-input reset-focus"
                     placeholder="Set Name"
                   />
                 </div>
-                <button
-                  type="button"
-                  class="delete-set-btn default-btn"
-                  id="delete-set-2"
-                  name="delete-set-2"
-                >
+                <button type="button" class="delete-set-btn default-btn">
                   Delete Set
                 </button>
               </header>
               <section class="ingredient-inputs-container">
                 <div class="ingredient-inputs">
                   <label
-                    for="ingredient-qty-2"
+                    for="ingredient-qty-2-2"
                     class="create-input-label ing-quantity-label"
                     >Quantity</label
                   >
                   <label
-                    for="ingredient-measurement-2"
+                    for="ingredient-measurement-2-3"
                     class="create-input-label ing-measure-label"
                     >Measurement</label
                   >
                   <label
-                    for="ingredient-name-2"
+                    for="ingredient-name-2-4"
                     class="ing-name-label create-input-label"
                     >Ingredient Name</label
                   >
                   <label
-                    for="ingredient-details-2"
+                    for="ingredient-details-2-5"
                     class="ingredient-dets-label create-input-label"
                     >Ingredient Details</label
                   >
@@ -544,13 +526,13 @@
                   <input
                     type="number"
                     class="create-input ingredient-qty-input"
-                    id="ingredient-qty-2"
-                    name="ingredient-qty-2"
+                    id="ingredient-qty-2-2"
+                    name="ingredient-qty-2-2"
                   />
                   <div class="custom-select ing-measure-input-container">
                     <select
-                      name="ingredient-measurement-2"
-                      id="ingredient-measurement-2"
+                      name="ingredient-measurement-2-3"
+                      id="ingredient-measurement-2-3"
                       class="create-input create-input-dropdown measurement-input"
                     >
                       <option value="cup">cup</option>
@@ -560,20 +542,16 @@
                   <input
                     type="text"
                     class="create-input ing-name-input"
-                    id="ingredient-name-2"
-                    name="ingredient-name-2"
+                    id="ingredient-name-2-4"
+                    name="ingredient-name-2-4"
                   />
                   <input
                     type="text"
                     class="create-input ing-details-input"
-                    id="ingredient-details-2"
-                    name="ingredient-details-2"
+                    id="ingredient-details-2-5"
+                    name="ingredient-details-2-5"
                   />
-                  <button
-                    name="delete-ingredient-2"
-                    id="delete-ingredient-2"
-                    class="delete-ingredient-btn default-btn"
-                  >
+                  <button class="delete-ingredient-btn default-btn">
                     <ion-icon
                       name="close-outline"
                       class="delete-ingredient-icon"
@@ -581,12 +559,7 @@
                   </button>
                 </div>
               </section>
-              <button
-                class="add-ingredient-btn default-btn"
-                id="add-ingredient-2"
-                name="add-ingredient-2"
-                type="button"
-              >
+              <button class="add-ingredient-btn default-btn" type="button">
                 <ion-icon name="add" class="add-ingredient-icon"></ion-icon>
                 <p>Add Ingredient</p>
               </button>
