--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -57,6 +57,7 @@ Medium:
   --accent-red: #d9534f;
   --accent-red-tint1: #dd6461;
   --accent-red-tint2: #e89895;
+  --accent-red-disabled: rgba(232, 152, 149, 0.5);
 
   --accent-green: #008800;
   --accent-green-tint1: #4dac4d;
