working delete ingredients btn (incomplete)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -465,7 +465,10 @@
                     id="ingredient-details-1-5"
                     name="ingredient-details-1-5"
                   />
-                  <button class="delete-ingredient-btn default-btn">
+                  <button
+                    class="delete-ingredient-btn default-btn"
+                    type="button"
+                  >
                     <ion-icon
                       name="close-outline"
                       class="delete-ingredient-icon"
@@ -551,7 +554,10 @@
                     id="ingredient-details-2-5"
                     name="ingredient-details-2-5"
                   />
-                  <button class="delete-ingredient-btn default-btn">
+                  <button
+                    class="delete-ingredient-btn default-btn"
+                    type="button"
+                  >
                     <ion-icon
                       name="close-outline"
                       class="delete-ingredient-icon"
